--- a/slides/aula04.html
+++ b/slides/aula04.html
@@ -361,6 +361,354 @@
 
 
 
+        <section data-auto-animate>
+          <h4>Usando <code>else</code> em laços</h4>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <h4>Usando <code>else</code> em laços</h4>
+
+          <p>
+            Python permite definir um bloco para ser executado quando o laço é
+            finalizado "<em>normalmente</em>":
+          </p>
+
+          <ul>
+            <li>
+              <code>while</code>: quando o laço pára por causa da condição
+            </li>
+            <li>
+              <code>for</code>: quando o laço pára por ter consumido todos os
+              items do iterável
+            </li>
+          </ul>
+
+          <p class='local-standout-box fragment' style='bottom: 2em;'>
+            Em outras palavras: quando o laço <strong>não é interrompido por um
+            <code>break</code></strong>  🙂
+          </p>
+        </section>
+
+
+        <section data-auto-animate>
+          <h4>Usando <code>else</code> em laços</h4>
+
+          <p style='font-size: .9em;'>
+            Isso é feito adicionando <code>else:</code> seguido de um bloco:
+          </p>
+
+          <div class='ace-brython' data-readonly data-components='code'>
+            <script type='text/x.ace-brython'>
+              while condicao:
+                  ...
+              else:
+                  ...
+            </script>
+          </div>
+          <br/>
+          <div class='ace-brython' data-readonly data-components='code'>
+            <script type='text/x.ace-brython'>
+              for i in iteravel:
+                  ...
+              else:
+                  ...
+            </script>
+          </div>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <h4>Usando <code>else</code> em laços</h4>
+
+          <p>Exemplo: modificar o exemplo de permitir no máximo 5 tentativas de
+          login.</p>
+
+          <div class='ace-brython fragment' data-components='code'
+               style='font-size: .6em;'
+          >
+            <script type='text/x.ace-brython'>
+              # Pedir senha no máximo 5 vezes
+              for i in range(5):
+                  senha = input('Digite a senha: ')
+                  if senha == '1234':
+                    print('Login realizado com sucesso')
+                    break
+              else:
+                  print('Login bloqueado')
+            </script>
+          </div>
+          <br/>
+          <div class='fragment' style='font-size: .8em; text-align: left;'>
+            Prós:<br/>
+            <ul style='margin-top: .2ex;'>
+              <li>Variável <code>sucesso</code> não mais necessária!</li>
+              <li>Código mais simples</li>
+            </ul>
+          </div>
+        </section>
+
+
+
+        <section>
+          <h3>Tratamento de erros</h3>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <h4>Tratamento de erros</h4>
+
+          <p>O que acontecerá ao executarmos o seguinte código?</p>
+
+          <div class='ace-brython fragment'>
+            <script type='text/x.ace-brython'>
+              a = int('treze')
+            </script>
+          </div>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <h4>Tratamento de erros</h4>
+
+          <p class='fragment fade-in-then-semi-out'>
+            O código anterior causou Python a lançar uma
+            <strong>exceção</strong>!
+          </p>
+
+          <p class='fragment fade-in-then-semi-out'>
+            <strong>Exceções</strong> são objetos utilizados por Python para
+            representar erros.
+          </p>
+
+          <p class='fragment'>
+            Se elas não são capturadas pelo nosso código, Python
+            <strong>aborta</strong> a execução do resto do programa.
+          </p>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <p style='font-size: .9em;'>
+            Como capturar exceções?
+          </p>
+
+          <p class='fragment'>
+            Através da instrução <code>try</code>:
+          </p>
+
+          <div class='fragment ace-brython' style='font-size: .6em;'>
+              <script type='text/x.ace-brython'>
+                def quadrado(n):
+                    try:
+                        n = int(n)
+                    except:
+                        print('Número inválido:', n)
+
+
+                quadrado('treze')
+                quadrado(13)
+              </script>
+          </div>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <p style='font-size: .9em;'>
+            Podemos utilizar a cláusula <code>else</code> para adicionar código
+            a ser executado apenas se o bloco definido por <code>try</code> for
+            executado com sucesso:
+          </p>
+
+          <div class='fragment ace-brython' style='font-size: .6em;'>
+              <script type='text/x.ace-brython'>
+                def quadrado(n):
+                    try:
+                        n = int(n)
+                    except:
+                        print('Número inválido:', n)
+                    else:
+                        print(n, 'ao quadrado é', n**2)
+
+
+                quadrado('treze')
+                quadrado(13)
+              </script>
+          </div>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <p style='font-size: .9em;'>
+            Podemos utilizar a cláusula <code>finally</code> para adicionar
+            código a ser executado em ambos os casos (erro ou não erro):
+          </p>
+
+          <div class='fragment ace-brython' style='font-size: .6em;'>
+              <script type='text/x.ace-brython'>
+                def quadrado(n):
+                    try:
+                        n = int(n)
+                    except:
+                        print('Número inválido:', n)
+                    else:
+                        print(n, 'ao quadrado é', n**2)
+                    finally:
+                        print('Tchau!')
+
+
+                quadrado('treze')
+                quadrado(13)
+              </script>
+          </div>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <p style='font-size: .8em; margin-bottom: 0;'>
+            Há diversos tipos de erros:
+          </p>
+
+          <ul style='font-size: .8em; margin-top: 0;'>
+            <li class='fragment'>
+              <code>ValueError</code>: Ocorre quando um valor utilizado em uma
+              operação é inválido. Esse tipo de exceção é lançada pela função
+              <code>int()</code>, por exemplo.
+            </li>
+
+            <li class='fragment'>
+              <code>TypeError</code>: Ocorre quando um valor utilizado em uma
+              operação não é de um tipo esperado. Esse tipo de exceção é
+              lançada quando tentamos executar <code>1 + 'a'</code>, por
+              exemplo.
+            </li>
+
+            <li class='fragment'>
+              <code>ZeroDivisionError</code>: Ocorre quando tentamos dividir um
+              número por zero.
+            </li>
+
+            <li class='fragment'>
+              E <strong>muitos</strong> outros. A lista de exceções
+              pré-definidas de Python pode ser vista em
+              <a
+                href='https://docs.python.org/3/library/exceptions.html#bltin-exceptions'
+                target='_blank'>
+                https://docs.python.org/3/library/exceptions.html#bltin-exceptions
+              </a>.
+            </li>
+          </ul>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <p style='font-size: .8em;'>
+            É sempre boa prática definirmos o tipo de exceção que queremos
+            capturar.
+          </p>
+
+          <p class='fragment' style='font-size: .8em;'>
+            Fazemos isso passando o tipo na cláusula <code>except</code>:
+          </p>
+
+          <div class='fragment ace-brython' style='font-size: .6em;'>
+              <script type='text/x.ace-brython'>
+                def quadrado(n):
+                    try:
+                        n = int(n)
+                    except ValueError:
+                        print('Número inválido:', n)
+                    else:
+                        print(n, 'ao quadrado é', n**2)
+                    finally:
+                        print('Tchau!')
+
+
+                quadrado('treze')
+                quadrado(13)
+              </script>
+          </div>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <p style='font-size: .8em;'>
+            É possível capturar mais de um tipo de exceção:
+          </p>
+
+          <div class='fragment ace-brython' data-components='code' style='font-size: .6em;'>
+              <script type='text/x.ace-brython'>
+                def potencia(base, expoente):
+                    try:
+                        base = float(base)
+                        expoente = float(expoente)
+                        resultado = base ** expoente
+                    except ValueError:
+                        print('Algum dos argumentos não é um número válido')
+                    except OverflowError:
+                        print('O resultado é muito grande')
+                    else:
+                        print(base, 'elevado a', expoente, 'é', resultado)
+
+
+                potencia('três', '3')
+                potencia('3', '3')
+                potencia('2.4', '1000')
+              </script>
+          </div>
+        </section>
+
+
+        <section data-auto-animate>
+          <h4>Tratamento de erros</h4>
+
+          <p>
+            Tratamento de erros é uma parte bem importante do seu código!
+          </p>
+          <p>
+            Um código de qualidade sempre realiza tratamento de erros quando
+            apropriado.
+          </p>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <h4>Tratamento de erros</h4>
+
+          <p>
+            Exemplo: validação de valores de entrada do programa.
+          </p>
+
+          <div class='fragment ace-brython' data-components='code' style='font-size: .6em;'>
+              <script type='text/x.ace-brython'>
+                while True:
+                    n = input('Valor de n: ')
+
+                    try:
+                        n = int(n)
+                    except ValueError:
+                        print('n deve ser um número inteiro')
+                    else:
+                        break
+
+                soma = sum(range(n))
+                print('a soma de 0 até', n - 1, 'é', soma)
+              </script>
+          </div>
+        </section>
+
+
         <section>
             <div class='r-fit-text'>
                 Até a próxima!
