aula05: fix typos

--- a/slides/aula05.html
+++ b/slides/aula05.html
@@ -1491,11 +1491,11 @@
               obra = 'Memórias Póstumas de Brás Cubas'
 
               print('Tudo minúsculo?',obra.islower())
-              print('Tudo minúsculo?',obra.isupper())
+              print('Tudo maiúsculo?',obra.isupper())
               print('Título?',obra.istitle())
               print('')
               print('Tudo minúsculo:',obra.lower())
-              print('Tudo minúsculo:',obra.upper())
+              print('Tudo maiúsculo:',obra.upper())
               print('Título:',obra.title())
               print('Invertidas:',obra.swapcase())
             </script>
