slides: aula06: add mising caminho assignment

--- a/slides/aula06.html
+++ b/slides/aula06.html
@@ -822,7 +822,7 @@
               No Linux:
               <div class='python-repl'><!--
               >>> import os.path
-              >>> os.path.join('notes', 'todo-list.txt')
+              >>> caminho = os.path.join('notes', 'todo-list.txt')
               >>> print(caminho)
               notes/todo-list.txt
               --></div>
