index: add link to aul06.zip

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
           <h1>Links:</h1>
           <ul>
             <li><a href='slides/aula06.html'>Slides</a></li>
+            <li><a href='class-data/aula06.zip'>Material gerado em aula</a></li>
           </ul>
         </section>
 
