slides: split aula06 into aula06 and aula07

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <h1>Tópicos:</h1>
           <ul>
             <li>Módulos</li>
-            <li>Manipulação de Arquivos</li>
+            <li>Implementando o jogo 2048</li>
           </ul>
         </section>
       </article>
