slides: fix typo in aula07

--- a/slides/aula07.html
+++ b/slides/aula07.html
@@ -322,7 +322,7 @@
               original.
             </p>
             <p>
-              <code>w+</code>: abre para leitura e escrita, e não trunca o
+              <code>r+</code>: abre para leitura e escrita, e não trunca o
               arquivo original.
             </p>
           </template>
